@@ -1,1 +1,0 @@
- * Tie::File::VERSION check bug - Tom Hukins
