@@ -1,15 +1,0 @@
-WHAT IS THIS?
-
-This is Tie::File::FixedRecLen, a Perl module.
-Please see the README that comes with this distribution.
-
-HOW DO I INSTALL IT?
-
-To install this module, cd to the directory that contains this README
-file and type the following:
-
-   perl Makefile.PL
-   make
-   make test
-   make install
-
