@@ -1,59 +1,0 @@
-ACKNOWLEDGEMENTS
-Changes
-examples/demo.pl
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-INSTALL
-lib/Tie/File/FixedRecLen.pm
-lib/Tie/File/FixedRecLen/Store.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00_version.t
-t/01_gen.t
-t/02_fetchsize.t
-t/03_longfetch.t
-t/04_splice.t
-t/05_size.t
-t/06_fixrec.t
-t/07_rv_splice.t
-t/08_ro.t
-t/09_gen_rs.t
-t/10_splice_rs.t
-t/11_rv_splice_rs.t
-t/12_longfetch_rs.t
-t/13_size_rs.t
-t/14_lock.t
-t/15_pushpop.t
-t/16_handle.t
-t/17_misc_meth.t
-t/18_rs_fixrec.t
-t/19_cache.t
-t/20_cache_full.t
-t/21_win32.t
-t/22_autochomp.t
-t/23_rv_ac_splice.t
-t/24_cache_loop.t
-t/25_gen_nocache.t
-t/26_twrite.t
-t/27_iwrite.t
-t/28_mtwrite.t
-t/29_downcopy.t
-t/29a_upcopy.t
-t/30_defer.t
-t/31_autodefer.t
-t/32_defer_misc.t
-t/33_defer_vs.t
-t/40_abs_cache.t
-t/41_heap.t
-t/42_offset.t
-t/90_store.t
-t/pod-coverage.t
-t/pod.t
