@@ -3,8 +3,6 @@ package Tie::File::FixedRecLen::Store;
 use strict;
 use warnings FATAL => 'all';
 
-our $VERSION = 0.4;
-
 use 5.004;
 use Carp;
 use Symbol;
@@ -135,21 +133,3 @@ foreach my $meth (qw/SPLICE FETCH POP SHIFT UNSHIFT CLEAR DELETE EXISTS EXTEND/)
 }
 
 1;
-
-# ===========================================================================
-
-# Copyright (c) The University of Oxford 2007. All Rights Reserved.
-# 
-# This program is free software; you can redistribute it and/or modify it
-# under the terms of version 2 of the GNU General Public License as published
-# by the Free Software Foundation.
-# 
-# This program is distributed in the hope that it will be useful, but WITHOUT
-# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
-# more details.
-# 
-# You should have received a copy of the GNU General Public License along with
-# this program; if not, write to the Free Software Foundation, Inc., 51
-# Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
-
